--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -8,5 +8,6 @@
     "trailingComma": "es5",
     "bracketSpacing": true,
     "arrowParens": "always",
-    "endOfLine": "lf"
+    "endOfLine": "auto"
+    
 }
